My hands-on activity

--- a/index.html
+++ b/index.html
@@ -5,12 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .body{
-            background-color: aqua;
+        body{
+            background-color: skyblue;
         }
+        
     </style>
 </head>
 <body>
+    <div>
+        <label for="Fname">Firstname </label>
+        <input type="text" name="Fname" id="Fname"><br><br>
+        <label for="Mname">Middlename: </label>
+        <input type="text" name="Mname" id="Mname"><br><br>
+        <label for="Lname">Lastname:</label>
+        <input type="text" name="Lname" id="Lname"> <br><br>
+
+        <label for="Gender">Gender:</label><br>
+        <input type="radio" name="male" id="male"> <label for="male">Male</label><br>
+        <input type="radio" name="female" id="female"> <label for="female">Female</label><br>
+        <input type="radio" name="others" id="others"> <label for="others">Others</label><br><br>
+
+        <label for="">Course:</label>
+        <select name="Course" id="Course">
+        <option value="BSCS">BSCS</option>
+        <option value="BLIS">BLIS</option>
+        <option value="IT">IT</option>
+    </select><br><br>
     
+        <label for="phone">Phone:</label>
+        <input type="text" placeholder="+91" style="width: 50px;">
+        <input type="text" name="" id=""><br><br>
+        <label for="">Address:</label><br>
+        <textarea name="textarea" id="textarea"></textarea><br><br>
+
+        <label for="email">Email:</label>
+        <input type="text" name="email" id="email"><br><br><br>
+
+        <label for="Password">Password:</label>
+        <input type="password" name="password" id="password"><br><br><br>
+
+        <label for="retypepass">Re-type password:</label>
+        <input type="password" name="password" id="password"><br><br>
+        <input type="submit" name="" id="">
+
+    </div>
 </body>
 </html>
